formulario login done

--- a/views/login.html
+++ b/views/login.html
@@ -46,17 +46,18 @@
 
     <main>
         <div class="contenedor">
-            <h1>Ingresa!</h1>
+            <h1>Ingresa </h1>
             <form action="">
                 
                 <!--username-->
                 <div class="container-input">
-                    <input type="text" placeholder="Nombre de usuari@" name="username">
+                    
+                    <input class= "text" type="text" placeholder="Nombre de usuari@" name="username">
                 </div>
 
                 <!--contraseña-->
                 <div class="container-input">
-                    <input type="password" name="pass" placeholder="contraseña">
+                    <input class= "text" type="password" name="pass" placeholder="contraseña">
                 </div>
 
                 <!--botones-->
