--- a/views/register.html
+++ b/views/register.html
@@ -89,25 +89,25 @@
                 <div class="container-input">
                     <input class="check" type="checkbox" name="intereses" value="electro" id="electro" /><label
                         for="electro">
-                        electro</label>
+                        Electro</label>
                 </div>
 
                 <div class="container-input">
                     <input class="check" type="checkbox" name="intereses" value="moda" id="moda" /> <label for="moda">
-                        moda</label>
+                        Moda</label>
                 </div>
                 <div class="container-input">
                     <input class="check" type="checkbox" name="intereses" value="hogar" id="hogar" /> <label
                         for="hogar">
-                        hogar</label>
+                        Hogar</label>
                 </div>
                 <div class="container-input">
                     <input class="check" type="checkbox" name="intereses" value="jugueteria" id="jugueteria" /> <label
-                        for="jugueteria"> jugueteria</label>
+                        for="jugueteria"> Jugueteria</label>
                 </div>
                 <div class="container-input">
                     <input class="check" type="checkbox" name="intereses" value="vida-sana" id="vida-sana" /> <label
-                        for="vida-sana"> vida sana</label>
+                        for="vida-sana"> Vida sana</label>
                 </div>
                 <!--foto de perfil-->
                 <h3>foto de perfil</h3>
