--- a/views/login.html
+++ b/views/login.html
@@ -34,8 +34,8 @@
                 <li> <a href="">Ayuda</a></li>
             </ul>
             <ul>
-                <li> <a href="./register.html">Crea tu cuenta <i class="far fa-id-card"></i> </a></li>
-                <li> <a href="">Ingresá <i class="fas fa-sign-in-alt"></i></a></li>
+                <li> <a href="/register">Crea tu cuenta <i class="far fa-id-card"></i> </a></li>
+                <li> <a href="/login">Ingresá <i class="fas fa-sign-in-alt"></i></a></li>
                 <li> <a href="">Mis Compras <i class="fas fa-shopping-basket"></i></a></li>
             </ul>
         </nav>
