--- a/views/register.html
+++ b/views/register.html
@@ -22,8 +22,8 @@
             <!--buscador-->
             <div class="buscar">
                 <form action="">
-                    <input type="text" class="buscar_texto" placeholder="Buscar productos, marcas">
-                    <button> <i class="fas fa-search"></i></button>
+                    <input type="text" name="buscar" placeholder="Buscar productos, marcas">
+                    <button type="submit"> <i class="fas fa-search"></i></button>
                 </form>
             </div>
             <!--compra en cuotas-->
@@ -41,7 +41,7 @@
             </ul>
             <ul>
                 <li> <a href="/register">Crea tu cuenta <i class="far fa-id-card"></i> </a></li>
-                <li> <a href="">Ingresá <i class="fas fa-sign-in-alt"></i></a></li>
+                <li> <a href="/login">Ingresá <i class="fas fa-sign-in-alt"></i></a></li>
                 <li> <a href="">Mis Compras <i class="fas fa-shopping-basket"></i></a></li>
             </ul>
         </nav>
@@ -52,7 +52,7 @@
     <!--Main-->
     <main>
         <div class="contenedor">
-            <h1>registrate</h1>
+            <h1>Registrate</h1>
             <form action="">
                 <!--fullname-->
                 <div class="container-input">
