--- a/views/register.html
+++ b/views/register.html
@@ -124,7 +124,7 @@
                 </div>
                 <!--botones-->
                 <div class="container-buttons">
-                    <button class="btn-verde" type="submit"> Registrarse</button>
+                    <button class="btn-celeste" type="submit"> Registrarse</button>
                     <button class="btn-rojo" type="resend"> Borrar </button>
                 </div>
             </form>
