--- a/public/css/home.css
+++ b/public/css/home.css
@@ -28,6 +28,10 @@ main section .banner{
 .home main section article {
   margin: 10px 0;
   background-color: white;
+  transition: all ease .3s;
+}
+.home main section article:hover{
+  box-shadow: 0px 0px 10px rgb(100, 100, 100)
 }
 /*contenedor datos*/
 .home main.productos article .datos{
@@ -53,6 +57,11 @@ main section .banner{
   position: absolute;
   right:20px;
   top: -15px;
+  transition: all ease .3s
+}
+.home main section article:hover .data i{
+box-shadow: 0 0 5px var(--colorVerde);
+transform:rotate(360deg);
 }
 .home main article .datos .caja-precios{
   display: flex;
@@ -71,13 +80,18 @@ main section .banner{
 }
 /*descripcion*/
 .home main article .datos .descripcion {
-  display: none;
+  height:0;
+  /*display: none;*/
   color: var(--colorGrisoscuro);
   padding-top: 10px;
-  
+  transition: all ease .3;
+  overflow:hidden
 }
 
-
+.home main article:hover .datos .descripcion{
+height:20px;
+margin-top:10px;
+}
 
 
 @media (min-width: 768px) {
@@ -92,7 +106,7 @@ main section .banner{
 @media (min-width: 1024px) {
   .home main section article{
     width:15%;
-  box-shadow: 0px 0px 10px rgb(100, 100, 100)
+  
   }
   .home main section article .datos .descripcion{
     width:15%;
