--- a/views/login.html
+++ b/views/login.html
@@ -62,7 +62,7 @@
 
                 <!--botones-->
                 <div class="container-buttons">
-                    <button class="btn-verde"type="submit">Ingresar</button>
+                    <button class="btn-celeste"type="submit">Ingresar</button>
 
                 </div>
             </form>
