--- a/views/login.html
+++ b/views/login.html
@@ -34,8 +34,8 @@
                 <li> <a href="">Ayuda</a></li>
             </ul>
             <ul>
-                <li> <a href="./register.html">Crea tu cuenta <i class="far fa-id-card"></i> </a></li>
-                <li> <a href="">Ingresá <i class="fas fa-sign-in-alt"></i></a></li>
+                <li> <a href="/register">Crea tu cuenta <i class="far fa-id-card"></i> </a></li>
+                <li> <a href="/login">Ingresá <i class="fas fa-sign-in-alt"></i></a></li>
                 <li> <a href="">Mis Compras <i class="fas fa-shopping-basket"></i></a></li>
             </ul>
         </nav>
@@ -62,7 +62,7 @@
 
                 <!--botones-->
                 <div class="container-buttons">
-                    <button class="btn-celeste"type="submit">Ingresar</button>
+                    <button class="btn-celeste2"type="submit">Ingresar</button>
 
                 </div>
             </form>
@@ -71,25 +71,28 @@
 
     <footer>
         <!--Pago con tarjeta-->
-        <div>
-            <i class="fas fa-credit-card"></i>
-            <h4>Pagá con tarjeta o en efectivo</h4>
-            <p>Con Mercado Liebre Cash, tenés cuotas sin interés con tarjeta o efectivo en
-                puntos de pago. ¡Y siempre es seguro!</p>
-        </div>
+        
+        <section class="contain-footer">
+            <div>
+                <i class="fas fa-credit-card"></i>
+                <h4>Pagá con tarjeta o en efectivo</h4>
+                <p>Con Mercado Liebre Cash, tenés cuotas sin interés con tarjeta o efectivo en
+                    puntos de pago. ¡Y siempre es seguro!</p>
+            </div>
 
-        <div> <i class="fas fa-gift"></i>
-            <h4>Envío gratis desde $ 2.500</h4>
-            <p>Solo por estar registrad@ en Mercado Liebre tenés envíos gratis en miles de
-                productos. Es un beneficio de Mercado Puntos.</p>
-        </div>
-        <div><i class="fas fa-user-shield"></i>
-            <h4>Seguridad, de principio a fin</h4>
-            <p>¿No te gusta? ¡Devolvelo! En Mercado Liebre, no hay nada que no puedas hacer,
-                porque estás siempre protegid@.
+            <div> <i class="fas fa-gift"></i>
+                <h4>Envío gratis desde $ 2.500</h4>
+                <p>Solo por estar registrad@ en Mercado Liebre tenés envíos gratis en miles de
+                    productos. Es un beneficio de Mercado Puntos.</p>
+            </div>
+            <div><i class="fas fa-user-shield"></i>
+                <h4>Seguridad, de principio a fin</h4>
+                <p>¿No te gusta? ¡Devolvelo! En Mercado Liebre, no hay nada que no puedas hacer,
+                    porque estás siempre protegid@.
 
-        </div>
-        <p class="derechos">Copyright © 1999-2020 MercadoLiebre S.R.L.</p>
+            </div>
+            <p class="derechos">Copyright © 1999-2020 MercadoLiebre S.R.L.</p>
+        </section>
 
 
     </footer>
